--- a/EDA_model.ipynb
+++ b/EDA_model.ipynb
@@ -630,34 +630,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **4.1.4 Data Duplicates**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Checking Duplicated in Data\n",
-    "data.duplicated().sum()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## ***4.2. Descriptive Statistics Analysis***"
    ]
   },
@@ -4310,15 +4282,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Berdasarkan dari ketiga model diatantaranya, LSTM, CNN, Dan GRU, didapatkan nilai "
+    "## **Conclusion MODEL:**  \n",
+    "\n",
+    "The table shows error metrics for three different machine learning models evaluated on their prediction performance:\n",
+    "\n",
+    "- **LSTM (Long Short-Term Memory)**: tends to have a lower average error in its predictions, with a slight increase in error when validated.\n",
+    "  \n",
+    "- **CNN (Convolutional Neural Network)**: has higher average errors in both training and validation, indicating it might not predict as accurately as LSTM.\n",
+    "  \n",
+    "- **GRU (Gated Recurrent Unit)**: shows a low error during training but a notable increase in error on validation, similar to LSTM.\n",
+    "The Mean Absolute Error (MAE) values reflect the average prediction error, and the Mean Squared Error (MSE) values give more weight to larger errors. Lower values are generally better for both metrics.\n",
+    "\n",
+    "Based on the results of the above analysis, the model to be used in the model is the LSTM model, because it has a low average error, and a small error when validating the model."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## **Conclusion MODEL:**  "
-   ]
+   "source": []
   }
  ],
  "metadata": {
