EDA Model Updated

--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -62,9 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\leede\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import boto3\n",
     "import os\n",
@@ -79,7 +88,7 @@
     "from nltk.corpus import stopwords\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "from wordcloud import WordCloud, STOPWORDS\n",
-    "from text_preprocessed import text_preprocessing\n",
+    "from preprocessing_function.text_preprocessed import text_preprocessing\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
@@ -172,12 +181,12 @@
     "\n",
     "# Download the file\n",
     "bucket = s3.Bucket('hck-009-group-2')\n",
-    "bucket.download_file('clean_data/data_clean.csv', './data_clean.csv')"
+    "bucket.download_file('clean_data/data_clean.csv', './data/data_clean.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -447,29 +456,81 @@
        "</div>"
       ],
       "text/plain": [
-       "                                app  ... sentiment_subjectivity\n",
-       "0               coloring book moana  ...                   1.00\n",
-       "1               coloring book moana  ...                   0.83\n",
-       "2               coloring book moana  ...                   0.00\n",
-       "3               coloring book moana  ...                   0.60\n",
-       "4               coloring book moana  ...                   0.90\n",
-       "...                             ...  ...                    ...\n",
-       "40311  a+ gallery - photos & videos  ...                   0.51\n",
-       "40312  a+ gallery - photos & videos  ...                   0.73\n",
-       "40313  a+ gallery - photos & videos  ...                   0.20\n",
-       "40314  a+ gallery - photos & videos  ...                   0.00\n",
-       "40315  a+ gallery - photos & videos  ...                   0.45\n",
+       "                                app        category  rating  reviews  \\\n",
+       "0               coloring book moana  art_and_design     3.9      967   \n",
+       "1               coloring book moana  art_and_design     3.9      967   \n",
+       "2               coloring book moana  art_and_design     3.9      967   \n",
+       "3               coloring book moana  art_and_design     3.9      967   \n",
+       "4               coloring book moana  art_and_design     3.9      967   \n",
+       "...                             ...             ...     ...      ...   \n",
+       "40311  a+ gallery - photos & videos     photography     4.5   223941   \n",
+       "40312  a+ gallery - photos & videos     photography     4.5   223941   \n",
+       "40313  a+ gallery - photos & videos     photography     4.5   223941   \n",
+       "40314  a+ gallery - photos & videos     photography     4.5   223941   \n",
+       "40315  a+ gallery - photos & videos     photography     4.5   223941   \n",
+       "\n",
+       "                     size  installs  type  price content_rating  \\\n",
+       "0                     14m    500000  free    0.0       everyone   \n",
+       "1                     14m    500000  free    0.0       everyone   \n",
+       "2                     14m    500000  free    0.0       everyone   \n",
+       "3                     14m    500000  free    0.0       everyone   \n",
+       "4                     14m    500000  free    0.0       everyone   \n",
+       "...                   ...       ...   ...    ...            ...   \n",
+       "40311  varies with device  10000000  free    0.0       everyone   \n",
+       "40312  varies with device  10000000  free    0.0       everyone   \n",
+       "40313  varies with device  10000000  free    0.0       everyone   \n",
+       "40314  varies with device  10000000  free    0.0       everyone   \n",
+       "40315  varies with device  10000000  free    0.0       everyone   \n",
+       "\n",
+       "                                 genres last_updated         current_ver  \\\n",
+       "0      ['art & design', 'pretend play']   2018-01-15               2.0.0   \n",
+       "1      ['art & design', 'pretend play']   2018-01-15               2.0.0   \n",
+       "2      ['art & design', 'pretend play']   2018-01-15               2.0.0   \n",
+       "3      ['art & design', 'pretend play']   2018-01-15               2.0.0   \n",
+       "4      ['art & design', 'pretend play']   2018-01-15               2.0.0   \n",
+       "...                                 ...          ...                 ...   \n",
+       "40311                   ['photography']   2018-08-06  varies with device   \n",
+       "40312                   ['photography']   2018-08-06  varies with device   \n",
+       "40313                   ['photography']   2018-08-06  varies with device   \n",
+       "40314                   ['photography']   2018-08-06  varies with device   \n",
+       "40315                   ['photography']   2018-08-06  varies with device   \n",
+       "\n",
+       "              android_ver                                  translated_review  \\\n",
+       "0            4.0.3 and up  a kid's excessive ads. the types ads allowed a...   \n",
+       "1            4.0.3 and up                                         it bad >:(   \n",
+       "2            4.0.3 and up                                               like   \n",
+       "3            4.0.3 and up                           i love colors inspyering   \n",
+       "4            4.0.3 and up                                             i hate   \n",
+       "...                   ...                                                ...   \n",
+       "40311  varies with device           overall great app. best gallery seen far   \n",
+       "40312  varies with device  recommended, 100% love it, keep good work dev ...   \n",
+       "40313  varies with device                                       too much ads   \n",
+       "40314  varies with device                                just allow time ...   \n",
+       "40315  varies with device                       it's good best gallery phone   \n",
+       "\n",
+       "      sentiment  sentiment_polarity  sentiment_subjectivity  \n",
+       "0      negative               -0.25                    1.00  \n",
+       "1      negative               -0.72                    0.83  \n",
+       "2       neutral                0.00                    0.00  \n",
+       "3      positive                0.50                    0.60  \n",
+       "4      negative               -0.80                    0.90  \n",
+       "...         ...                 ...                     ...  \n",
+       "40311  positive                0.48                    0.51  \n",
+       "40312  positive                0.57                    0.73  \n",
+       "40313  positive                0.20                    0.20  \n",
+       "40314   neutral                0.00                    0.00  \n",
+       "40315  positive                0.85                    0.45  \n",
        "\n",
        "[40316 rows x 17 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv('data_clean.csv')\n",
+    "data = pd.read_csv('data/data_clean.csv')\n",
     "data"
    ]
   },
@@ -2577,37 +2638,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_length_distribution(data, sentiment_label, sentiment_name, color):\n",
-    "    \"\"\"\n",
-    "    Plots the distribution of text lengths with annotations for mean and median.\n",
-    "\n",
-    "    Parameters:\n",
-    "    - data (DataFrame): The dataset containing the text and labels.\n",
-    "    - sentiment_label (int): The label of the sentiment to filter the data.\n",
-    "    - sentiment_name (str): The name of the sentiment to be used in the title.\n",
-    "    - color (str): The color to use for the histogram.\n",
-    "    \"\"\"\n",
-    "    # Calculate the length of each text entry for the given sentiment\n",
-    "    sentiment_data = data.loc[data['label'] == sentiment_label].copy()\n",
-    "    sentiment_data.loc[:, 'length'] = sentiment_data.text_processed.str.split().apply(len)\n",
-    "    \n",
-    "    # Plot the distribution of text length\n",
-    "    plt.figure(figsize=(10, 6))\n",
-    "    sns.boxplot(data=sentiment_data, x='length', color=color)\n",
-    "    \n",
-    "    plt.title(f'Distribution of text length for {sentiment_name} sentiment text.', fontsize=16)\n",
-    "    plt.xlabel('Length')\n",
-    "    plt.ylabel('Count')\n",
-    "    \n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
@@ -2631,6 +2661,7 @@
     }
    ],
    "source": [
+    "# Length Distribution for each Sentiment\n",
     "data['text_length'] = data['translated_review'].apply(len)\n",
     "data['text_length'].describe()"
    ]
@@ -2652,6 +2683,7 @@
     }
    ],
    "source": [
+    "# Display Boxplot of Text Length\n",
     "plt.figure(figsize=(12, 8))\n",
     "sns.boxplot(data=data, x='text_length', hue='sentiment')\n",
     "plt.xlim(0, 500)\n",
@@ -4622,7 +4654,7 @@
     }
    ],
    "source": [
-    "model = load_model('lstm')\n",
+    "model = load_model('models/lstm')\n",
     "model"
    ]
   },
@@ -4709,7 +4741,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
