--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -2637,6 +2637,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sentiment\n",
+       "positive    19308\n",
+       "negative     6605\n",
+       "neutral      4204\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['sentiment'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [
@@ -2659,6 +2683,13 @@
     "plt.xlabel('Text Length')\n",
     "plt.title('Distribution of Text Length (Character) by Sentiment')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "People tend to write longer texts when they are expressing negative sentiments. This could be because when users have negative feedback, they may provide more detailed explanations or express their dissatisfaction more extensively. The number of sentiments in each category does not necessarily correlate with the length of the text; rather, it's the nature of the sentiment being expressed that may influence the length."
    ]
   },
   {
